--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
 	<!-- Заголовок страницы в браузере -->
-	<title>Font Squierrel</title>
+	<title>Anime</title>
 	<meta charset="UTF-8">
 	<!--Подключаем шрифт сгенерированный через Font Squierrel -->
 	<style>
